# Kronk-Backend

./: .gitignore  README.md  pyproject.toml
k3s/: fastapi-deployment.yaml  taskiq-schedular.yaml  taskiq-worker.yaml
pod/: .env  Dockerfile
pod/app/: main.py
pod/app/admin_app/: routes.py
pod/app/community_app/: models.py  routes.py  schemas.py
pod/app/education_app/: models.py
pod/app/my_taskiq/: my_taskiq.py
pod/app/services/: azure_service.py  firebase_service.py  zepto_service.py
pod/app/settings/: my_config.py  my_dependency.py  my_minio.py  my_redis.py  my_websocket.py
pod/app/users_app/: models.py  routes.py  schemas.py
pod/app/utility/: decorator.py  jwt_utils.py  my_enums.py  my_logger.py  my_middleware.py  utility.py  validators.py
service/: .env  docker-compose.yml
